--- a/peanut/strand/templates/strand/strandStats.html
+++ b/peanut/strand/templates/strand/strandStats.html
@@ -65,6 +65,10 @@
 	.ui-server-switch {
 		font-size: 16px
 	}
+	.top-table {
+		float: left;
+		margin-left: 20px;
+	}
 
 </style>
 <script src="/static/jquery-1.10.2.min.js"></script>
@@ -74,71 +78,77 @@
 	<div class='ui-server-id' id='ui-server-id'>
 	</div>
 
-	<div class='ui-header'> Strands &mdash; ({{ strandCounts.all }}) </div>
-	<table class='ui-table' cellpadding='3'>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> All </td>
-			<td class='counts'> {{ strandCounts.all }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 1 photo </td>
-			<td class='counts'> {{ strandCounts.b1 }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 2-4 photos </td>
-			<td class='counts'> {{ strandCounts.b2 }} </td>
-		</tr>			
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 5-10 photos </td>
-			<td class='counts'> {{ strandCounts.b3 }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 b-r'> 10+ photos </td>
-			<td class='counts'> {{ strandCounts.b4 }} </td>
-		</tr>			
+	<div class='top-table'>
+		<div class='ui-header'> Strands </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> All </td>
+				<td class='counts'> {{ strandCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 1 photo </td>
+				<td class='counts'> {{ strandCounts.b1 }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 2-4 photos </td>
+				<td class='counts'> {{ strandCounts.b2 }} </td>
+			</tr>			
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 5-10 photos </td>
+				<td class='counts'> {{ strandCounts.b3 }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 b-r'> 10+ photos </td>
+				<td class='counts'> {{ strandCounts.b4 }} </td>
+			</tr>			
 
-	</table>
+		</table>
+	</div>
 
-	<div class='ui-header'> Strands &mdash; ({{ userCounts.all }}) </div>
-	<table class='ui-table' cellpadding='3'>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> All </td>
-			<td class='counts'> {{ userCounts.all }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 1 person </td>
-			<td class='counts'> {{ userCounts.b1 }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 2 people </td>
-			<td class='counts'> {{ userCounts.b2 }} </td>
-		</tr>			
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> 3 people </td>
-			<td class='counts'> {{ userCounts.b3 }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 b-r'> 3+ people </td>
-			<td class='counts'> {{ userCounts.b4 }} </td>
-		</tr>			
+	<div class='top-table'>
+		<div class='ui-header'> Strands </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> All </td>
+				<td class='counts'> {{ userCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 1 person </td>
+				<td class='counts'> {{ userCounts.b1 }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 2 people </td>
+				<td class='counts'> {{ userCounts.b2 }} </td>
+			</tr>			
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> 3 people </td>
+				<td class='counts'> {{ userCounts.b3 }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 b-r'> 3+ people </td>
+				<td class='counts'> {{ userCounts.b4 }} </td>
+			</tr>			
 
-	</table>
+		</table>
+	</div>
 
-	<div class='ui-header'> Invites &mdash; ({{ inviteCounts.all }}) </div>
-	<table class='ui-table' cellpadding='3'>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> All </td>
-			<td class='counts'> {{ inviteCounts.all }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> Accepted </td>
-			<td class='counts'> {{ inviteCounts.accepted }} </td>
-		</tr>
-		<tr class='ui-row' >
-			<td class='col1 right b-r'> Swapped </td>
-			<td class='counts'> {{ inviteCounts.swapped }} </td>
-		</tr>
-	</table>
+	<div class='top-table'>
+		<div class='ui-header'> Invites </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> All </td>
+				<td class='counts'> {{ inviteCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Accepted </td>
+				<td class='counts'> {{ inviteCounts.accepted }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Swapped </td>
+				<td class='counts'> {{ inviteCounts.swapped }} </td>
+			</tr>
+		</table>
+	</div>
 
 <div id="stats" class="text">
 	<!-- STATS: Total time: %(total_time).2fs | Python: %(python_time).2fs | DB: %(db_time).2fs | Queries: %(db_queries)d ENDSTATS -->
