wording tweaks on usersummarypae

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -86,23 +86,23 @@
 		<div class='ui-header'> Photos </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> All </td>
+				<td class='col1 right b-r'> All Strands </td>
 				<td class='counts'> {{ strandCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 1 photo </td>
+				<td class='col1 right b-r'> w/ 1 photo </td>
 				<td class='counts'> {{ strandCounts.b1 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 2-4 photos </td>
+				<td class='col1 right b-r'> w/ 2-4 photos </td>
 				<td class='counts'> {{ strandCounts.b2 }} </td>
 			</tr>			
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 5-10 photos </td>
+				<td class='col1 right b-r'> w/ 5-10 photos </td>
 				<td class='counts'> {{ strandCounts.b3 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 b-r'> 10+ photos </td>
+				<td class='col1 b-r'> w/ 10+ photos </td>
 				<td class='counts'> {{ strandCounts.b4 }} </td>
 			</tr>			
 
@@ -113,23 +113,23 @@
 		<div class='ui-header'> People </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> All </td>
+				<td class='col1 right b-r'> All Strands </td>
 				<td class='counts'> {{ userCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 1 person </td>
+				<td class='col1 right b-r'> w/ 1 person </td>
 				<td class='counts'> {{ userCounts.b1 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 2 people </td>
+				<td class='col1 right b-r'> w/ 2 people </td>
 				<td class='counts'> {{ userCounts.b2 }} </td>
 			</tr>			
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> 3 people </td>
+				<td class='col1 right b-r'> w/ 3 people </td>
 				<td class='counts'> {{ userCounts.b3 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 b-r'> 3+ people </td>
+				<td class='col1 b-r'> w/ 3+ people </td>
 				<td class='counts'> {{ userCounts.b4 }} </td>
 			</tr>			
 
@@ -140,7 +140,7 @@
 		<div class='ui-header'> Invites </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> All </td>
+				<td class='col1 right b-r'> All Invites </td>
 				<td class='counts'> {{ inviteCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
