updating buckets for people

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -129,9 +129,13 @@
 				<td class='counts'> {{ userCounts.b3 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 b-r'> w/ 3+ people </td>
+				<td class='col1 b-r'> w/ 4-5 people </td>
 				<td class='counts'> {{ userCounts.b4 }} </td>
 			</tr>			
+			<tr class='ui-row' >
+				<td class='col1 b-r'> w/ 5+ people </td>
+				<td class='counts'> {{ userCounts.b5 }} </td>
+			</tr>
 
 		</table>
 	</div>
