minor wording tweaks

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -32,7 +32,7 @@
 		font-weight: bold;
 		text-align: left;
 		padding-bottom: 4px;
-	}
+	}	
 	.ui-row-header {
 		font-weight: bold;
 		font-size: 12px;
@@ -83,7 +83,7 @@
 	</div>
 	<div class='top-summary'>
 	<div class='top-table'>
-		<div class='ui-header'> Photos </div>
+		<div class='ui-header'> Strand.photos </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> All Strands </td>
@@ -102,7 +102,7 @@
 				<td class='counts'> {{ strandCounts.b3 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 b-r'> w/ 10+ photos </td>
+				<td class='col1 right b-r'> w/ 10+ photos </td>
 				<td class='counts'> {{ strandCounts.b4 }} </td>
 			</tr>			
 
@@ -110,7 +110,7 @@
 	</div>
 
 	<div class='top-table'>
-		<div class='ui-header'> People </div>
+		<div class='ui-header'> Strand.users </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> All Strands </td>
@@ -129,11 +129,11 @@
 				<td class='counts'> {{ userCounts.b3 }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 b-r'> w/ 4-5 people </td>
+				<td class='col1 right b-r'> w/ 4-5 people </td>
 				<td class='counts'> {{ userCounts.b4 }} </td>
 			</tr>			
 			<tr class='ui-row' >
-				<td class='col1 b-r'> w/ 5+ people </td>
+				<td class='col1 right b-r'> w/ 5+ people </td>
 				<td class='counts'> {{ userCounts.b5 }} </td>
 			</tr>
 
