--- a/strand/iOS/Strand/Strand/DFFeedViewController.xib
+++ b/strand/iOS/Strand/Strand/DFFeedViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFFeedViewController">
@@ -27,8 +27,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="mAb-nL-iw8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LNC-kW-dbX"/>
                 <constraint firstAttribute="trailing" secondItem="mAb-nL-iw8" secondAttribute="trailing" id="Lfq-l6-ZM3"/>
+                <constraint firstItem="mAb-nL-iw8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="900" id="Ray-ct-88y"/>
                 <constraint firstAttribute="bottom" secondItem="mAb-nL-iw8" secondAttribute="bottom" id="VFt-Yq-kRR"/>
                 <constraint firstItem="mAb-nL-iw8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ssy-eM-3Hx"/>
             </constraints>
