--- a/strand/iOS/Strand/Strand/DFSwapViewController.xib
+++ b/strand/iOS/Strand/Strand/DFSwapViewController.xib
@@ -5,9 +5,9 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFFriendsViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFSwapViewController">
             <connections>
-                <outlet property="tableView" destination="tY5-yj-2sT" id="xem-cj-p9C"/>
+                <outlet property="tableView" destination="nxo-cd-cP8" id="R6S-a7-GmO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,23 +16,22 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="tY5-yj-2sT">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="nxo-cd-cP8">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="2ek-1Z-FRA"/>
-                        <outlet property="delegate" destination="-1" id="gdG-eD-zFM"/>
+                        <outlet property="dataSource" destination="-1" id="281-6M-QyQ"/>
+                        <outlet property="delegate" destination="-1" id="n4U-dt-JwX"/>
                     </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="tY5-yj-2sT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="FTA-Cz-Z2r"/>
-                <constraint firstAttribute="bottom" secondItem="tY5-yj-2sT" secondAttribute="bottom" id="Hx5-L8-tll"/>
-                <constraint firstAttribute="trailing" secondItem="tY5-yj-2sT" secondAttribute="trailing" id="JEK-HP-Nuc"/>
-                <constraint firstItem="tY5-yj-2sT" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="z8L-E6-imL"/>
+                <constraint firstItem="nxo-cd-cP8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4Q6-0p-WNA"/>
+                <constraint firstAttribute="trailing" secondItem="nxo-cd-cP8" secondAttribute="trailing" id="CXf-R4-hgN"/>
+                <constraint firstAttribute="bottom" secondItem="nxo-cd-cP8" secondAttribute="bottom" id="awS-35-3Hy"/>
+                <constraint firstItem="nxo-cd-cP8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="iAL-4G-djU"/>
             </constraints>
-            <point key="canvasLocation" x="113" y="158"/>
         </view>
     </objects>
 </document>
