--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -82,9 +82,40 @@
 <div class="ui-content">
 	<div class='ui-server-id' id='ui-server-id'>
 	</div>
-	<div class='top-summary'>		
+	<div class='top-summary'>
+
 	<div class='top-table'>
-		<div class='ui-header'> Strand.photos </div>
+		<div class='ui-header center'> Totals </div>
+		<table class='ui-table' cellpadding='3'>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Users </td>
+				<td class='counts'> {{ peopleCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Friends </td>
+				<td class='counts'> {{ peopleCounts.friends }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Strands </td>
+				<td class='counts'> {{ strandCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Invites </td>
+				<td class='counts'> {{ inviteCounts.all }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Photos (shared) </td>
+				<td class='counts'> {{ peopleCounts.photosShared|intcomma  }} </td>
+			</tr>
+			<tr class='ui-row' >
+				<td class='col1 right b-r'> Photos (metadata) </td>
+				<td class='counts'> {{ peopleCounts.photosMetadata|intcomma }} </td>
+			</tr>
+
+		</table>
+	</div>				
+	<div class='top-table'>
+		<div class='ui-header center'> Strand.photos </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> All Strands </td>
@@ -111,7 +142,7 @@
 	</div>
 
 	<div class='top-table'>
-		<div class='ui-header'> Strand.users </div>
+		<div class='ui-header center'> Strand.users </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> All Strands </td>
@@ -142,7 +173,7 @@
 	</div>
 
 	<div class='top-table'>
-		<div class='ui-header'> Invites </div>
+		<div class='ui-header center'> Invites </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
 				<td class='col1 right b-r'> All Invites </td>
@@ -156,37 +187,6 @@
 				<td class='col1 right b-r'> Swapped </td>
 				<td class='counts'> {{ inviteCounts.swapped }} </td>
 			</tr>
-		</table>
-	</div>	
-
-	<div class='top-table'>
-		<div class='ui-header'> Totals </div>
-		<table class='ui-table' cellpadding='3'>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Users </td>
-				<td class='counts'> {{ peopleCounts.all }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Friends </td>
-				<td class='counts'> {{ peopleCounts.friends }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Strands </td>
-				<td class='counts'> {{ strandCounts.all }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Invites </td>
-				<td class='counts'> {{ inviteCounts.all }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (shared) </td>
-				<td class='counts'> {{ peopleCounts.photosShared|intcomma  }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (metadata) </td>
-				<td class='counts'> {{ peopleCounts.photosMetadata|intcomma }} </td>
-			</tr>
-
 		</table>
 	</div>	
 
