--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -100,7 +100,7 @@
 				<td class='counts'> {{ strandCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> Invites </td>
+				<td class='col1 right b-r'> Requests </td>
 				<td class='counts'> {{ inviteCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
@@ -173,10 +173,10 @@
 	</div>
 
 	<div class='top-table'>
-		<div class='ui-header center'> Invites </div>
+		<div class='ui-header center'> Requests </div>
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row' >
-				<td class='col1 right b-r'> All Invites </td>
+				<td class='col1 right b-r'> All Requests </td>
 				<td class='counts'> {{ inviteCounts.all }} </td>
 			</tr>
 			<tr class='ui-row' >
@@ -212,7 +212,7 @@
 				<td class='db-count center b-r'> Metadata </td>
 				<td class='gps-count center b-r'> with GPS <br> (%)</td>
 				<td class='thumbs center b-r'> Shared <br> (7d | all) </td>
-				<td class='invites center b-r'> Invites <br> Sent </td>
+				<td class='requests center b-r'> Requests <br> Sent </td>
 				<td class='strands_created center b-r'> Strands <br> Created </td>
 				<td class='strands_joined center b-r'> Strands <br> Joined </td>
 				<td class='photos_added center b-r'> Photos <br> Added  </td>
@@ -234,7 +234,7 @@
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>	
 				<td class='gps-count center b-r'> {{ entry.photosWithGPS|floatformat:0 }}</td>					
 				<td class='thumbs right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
-				<td class='invites right b-r'> {{ entry.inviteCount }} </td>
+				<td class='requests right b-r'> {{ entry.inviteCount }} </td>
 				<td class='strands_created center b-r'> {{ entry.weeklyStrandsCreated }} </td>
 				<td class='strands_joined center b-r'> {{ entry.weeklyStrandsJoined }} </td>
 				<td class='photos_added center b-r'> {{ entry.weeklyPhotosAdded }} </td>
